--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 body {
-  background-color: #000000;
-  color: #00FF00;
-  border-left: 100px;
-}
+    background-color: #000000;
+    color: #00FF00;
+    border: 1px solid rgb(0, 240, 0);
+    text-align: center;
+  }
