--- a/index.css
+++ b/index.css
@@ -18,8 +18,18 @@ h2 {
    font-family: 'Times New Roman', Times, serif;
    font-style: italic;
    padding-bottom: 30px;
-   border-bottom:  2px solid #00FF00;
-  /* background-image: url(https://i.ibb.co/yp9vXvd/20160505-151327.jpg); */
+   
+   
+}
+
+#imgHead {
+  height: 500px ;
+  background-image: url(https://i.ibb.co/yp9vXvd/20160505-151327.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  justify-content: center;
+  border-bottom:  2px solid #00FF00;
 }
 
 #motto-subtext {
