--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
   }
 
 h1 {
-   font-size: 45px;
+   font-size: 40px;
    font-family: 'Times New Roman', Times, serif;
    font-style: italic;
    padding-top: 30px;
@@ -15,7 +15,7 @@ h1 {
 }
 
 h2 {
-   font-size: 45px;
+   font-size: 40px;
    font-family: 'Times New Roman', Times, serif;
    font-style: italic;
    padding-bottom: 30px;
@@ -40,7 +40,8 @@ h2 {
 }
 
 #citrus-co {
-
+  height:auto;
+  width:300px;
 }
 
 #motto-subtext2 {
@@ -87,6 +88,7 @@ h2 {
 #ServiceList {
   font-size: 20px;
   padding-bottom: 20px;
+  text-shadow: 2px 2px 5px #ffffff;
 }
 
 a:hover {
