--- a/index.css
+++ b/index.css
@@ -31,17 +31,30 @@ h2 {
   display: block;
 }
 
+#about-me {
+  font-size: 20px;
+  font-style: italic;
+  text-shadow: 2px 2px 5px #ffffff;
+}
+
+#serviceArea {
+  border-top: 2px solid #00FF00;
+  font-size: 40px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-style: italic;
+  text-shadow: 2px 2px 5px #ffffff;
+}
+
 #motto-subtext1 {
   font-size: 40px;
-  border-top: 2px solid #00FF00;
-  padding-top: 50px;
   font-style: italic;
   text-shadow: 2px 2px 5px #ffffff;
 }
 
 #citrus-co {
   height:auto;
-  width:300px;
+  width:150px;
 }
 
 #motto-subtext2 {
