--- a/index.css
+++ b/index.css
@@ -132,10 +132,12 @@ a:hover {
   overflow: auto;
   white-space: nowrap;
   padding: 20px;
+  width: 100%;
+  height: 200px;
 }
 
 #img1, #img2, #img3, #img4, #img5, #img6, #img7, #img8, #img9, #img10, #img11 {
-  max-width: 200px;
-  max-height:200px;
+  width: 100px;
+  height:100px;
   padding: 50px;
 }
