--- a/index.css
+++ b/index.css
@@ -126,18 +126,16 @@ a:hover {
   color:#00FFBB
 }
 
-.imgReel {
+.imgContainer {
   border-top: 2px solid #00FF00;
   background-color: #000000;
-  overflow: auto;
-  white-space: nowrap;
+  display: block;
   padding: 20px;
-  width: 100%;
-  height: 200px;
+
 }
 
 #img1, #img2, #img3, #img4, #img5, #img6, #img7, #img8, #img9, #img10, #img11 {
-  width: 70px;
-  height: 70px;
+  max-width: 100px;
+  height: 100px;
   padding: 50px;
 }
