--- a/index.css
+++ b/index.css
@@ -36,8 +36,7 @@ h2 {
   font-size: 23px;
   font-style: italic;
   text-shadow: 2px 2px 5px #ffffff;
-  border-top: 2px solid #00FF00;
-  padding-top: 20px;
+  padding-top: 10px;
 }
 
 #serviceArea {
@@ -69,7 +68,7 @@ h2 {
 
 #contacts {
     color: #00FF00;
-    font-size: 30px;
+    font-size: 40px;
     padding-bottom: 50px;
     text-shadow: 2px 2px 5px #ffffff;
     border-top: 2px solid #00FF00;
@@ -88,7 +87,7 @@ h2 {
 }
 
 #ServiceList {
-  font-size: 20px;
+  font-size: 30px;
   padding-bottom: 20px;
   text-shadow: 2px 2px 5px #ffffff;
   padding-top: 20px;
@@ -138,7 +137,7 @@ a:hover {
   padding: 30px;
 }
 
-#photo-text {
+#photo-text, #about-me-text {
   border-bottom: 2px solid #00FF00;
   padding-top: 50px;
   font-size: 50px;
