removed ibb image which wasnt redering on mobile with a github file reference, and removed html ibb link info comment

--- a/index.css
+++ b/index.css
@@ -24,10 +24,10 @@ h2 {
 }
 
 #imgHead {
-  background-image: url(https://i.ibb.co/yp9vXvd/20160505-151327.jpg);
+  background-image: url(https://raw.githubusercontent.com/ArtBerger88/ArtRepo/main/20160505_151327.jpg);
   background-repeat: no-repeat;
   background-position: center center;
-  background-size: 300px;
+  background-size: 340px;
   height: auto;
   display: block;
 }
