changed height of head background photo from auto to a size that loks good on desktop and mobile

--- a/index.css
+++ b/index.css
@@ -28,7 +28,7 @@ h2 {
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 340px;
-  height: auto;
+  height: 330px;
   display: block;
 }
 
