--- a/index.css
+++ b/index.css
@@ -158,7 +158,7 @@ a:hover {
   padding-top:50px;
 }
 
-#img1, #img2, #img3, #img4, #img5, #img6, #img7, #img8, #img9, #img10, #img11 {
+#img1, #img2, #img3, #img4, #img5, #img6, #img7, #img8, #img9, #img10, #img11, #img12 {
   width: 200px;
   height: 200px;
   padding: 30px;
