--- a/index.css
+++ b/index.css
@@ -188,20 +188,28 @@ a:hover {
   background-color: #91ffa7;
   height: 24px;
   width: 300px;
+  border-radius: 10px;
 }
 
 #form-input-area {
   background-color: #91ffa7;
   width: 300px;
+  border-radius: 10px;
 }
 
 #submitButton {
+  font-size: 20px;
   color:#00FF00;
   border-color:#FF0000;
   background-color: #000000;
   border-radius: 10px;
-  height: 20px;
+  height: 30px;
   width: 100px;
+}
+
+#message-error {
+  color: #FF0000;
+  font-size: 30px;
 }
 
 #welcomeMsg {
