--- a/index.css
+++ b/index.css
@@ -176,16 +176,12 @@ a:hover {
   border-radius: 40px;
 }
 
-.list-img:hover {
-  transform: scale(1.25);
-}
-
 .list-img {
   display: flex;
   width: 400px;
   max-width: 100%;
-  height: 700px;
-  max-height: 100%;
+  height: 400px;
+  max-height:100%;
   overflow: hidden;
   
 }
@@ -196,7 +192,7 @@ a:hover {
   font-size: 50px;
 }
 
-.zoom:hover {
+.zoom:hover, .list-img:hover{
   transform: scale(2);
 }
 
