--- a/index.css
+++ b/index.css
@@ -254,7 +254,7 @@ a:hover {
 
 .container {
   display: flex;
-  flex-flow: row ;
+  flex-flow: row wrap;
   justify-content: center;
   align-items: center;
   
