changed fadeImgContainer class to use 100% height for mobile veiwport veiwing

--- a/index.css
+++ b/index.css
@@ -164,7 +164,7 @@ a:hover {
 .fadeImgContainer {
   position: relative;
   width: 100%;
-  height: 1150px;
+  height: 100%;
   display: inline-block;
   vertical-align: middle;
 }
