--- a/index.css
+++ b/index.css
@@ -204,7 +204,7 @@ a:hover {
   animation-iteration-count: infinite;
 }
   */
-#img1, #img2, #img3, #img4, #img5, #img6, #img8, #img9, #img10, #img12, #img13, #img14, #img15, #img16, #img17, #img18, #img19, #img20, #img21 {
+#img1, #img2, #img3, #img4, #img5, #img6, #img8, #img9, #img10, #img12, #img13, #img14, #img15, #img16, #img17, #img18, #img19, #img20, #img21, #img22, #img23, #img24 {
   width: 200px;
   height: 200px;
   padding: 30px;
