--- a/index.css
+++ b/index.css
@@ -203,8 +203,16 @@ a:hover {
   animation: fadeIn 4s, fadeOut 4s forwards;
   animation-iteration-count: infinite;
 }
-  */
-#img1, #img2, #img3, #img4, #img5, #img6, #img8, #img9, #img10, #img12, #img13, #img14, #img15, #img16, #img17, #img18, #img19, #img20, #img21, #img22, #img23, #img24 {
+ 
+#img1, #img2, #img3, #img4, #img5, #img6, #img8, #img9, #img10, #img12, #img13, #img14, #img15, #img16, #img17, #img18, #img19, #img20, #img21, #img22, #img23, #img24, #img25, #img26 {
+  width: 200px;
+  height: 200px;
+  padding: 30px;
+  border-radius: 40px;
+}
+*/ 
+
+.fadeImg, .fadeImg2, .zoom {
   width: 200px;
   height: 200px;
   padding: 30px;
@@ -215,8 +223,6 @@ a:hover {
   
   border-radius: 40px;
 }
-
-
 .list-img {
   display: flex;
   width: 400px;
