--- a/index.css
+++ b/index.css
@@ -90,7 +90,7 @@ h2 {
     text-shadow: 2px 2px 5px #00FF00;
   }
 
-#services {
+#services, #paymentHead {
   font-size: 50px;
   border-bottom:  2px solid #00FF00;
   text-shadow: 2px 2px 5px #ffffff;
@@ -249,7 +249,7 @@ a:hover {
   
 }
 
-#photo-text, #about-me-text, #ContactUs-FormTitle, #contact-section {
+#photo-text, #about-me-text, #contactUs-FormTitle, #contact-section {
   border-bottom: 2px solid #00FF00;
   padding-top: 50px;
   font-size: 50px;
@@ -266,6 +266,41 @@ a:hover {
 #photo-disclaimer {
   font-size:10px;
   padding-top: 50px;
+}
+
+.payTextHead {
+  font-size: 30px;
+  padding-top: 25px;
+  padding-bottom: 15px;
+}
+
+.payBtn {
+  font-size: 15px;
+  color:#000000;
+  border-color:#00FF00;
+  background-color: #91ffa7;
+  border-radius: 30px;
+  height: 40px;
+  width: 180px;
+}
+
+.payBtn:hover, #submitButton:hover {
+  background-color:white;
+}
+
+.zelleQR {
+  width: 150px;
+  height: 150px;
+}
+
+#imporMsg {
+  font-size:25px;
+  font-weight: bold;
+  animation: colorChange 3s infinite;
+}
+
+.zelleQR:hover, .QR:hover {
+  border: 2px solid #00FF00
 }
 
 #form {
