-moved review section under Photos -moved review navlink after Gallery -made "click to see more" in photo section a clickable link -removed photo-disclaimer css -added css for action/action visited

--- a/index.css
+++ b/index.css
@@ -285,9 +285,12 @@ a:hover {
   transform: scale(2);
 }
 
-#photo-disclaimer {
-  font-size:10px;
-  padding-top: 50px;
+a {
+  color:#00FFBB;
+}
+
+a:visited {
+  color: 	#00BFFF;
 }
 
 .payTextHead {
