--- a/index.css
+++ b/index.css
@@ -1,26 +1,25 @@
 body {
-    background-color: #000000;
-    color: #00FF00;
-    border: 1px solid rgb(0, 240, 0);
-    text-align: center;
-    text-shadow: 2px 2px 5px #ffffff;
-  }
+  background-color: #000000;
+  color: #00ff00;
+  border: 1px solid rgb(0, 240, 0);
+  text-align: center;
+  text-shadow: 2px 2px 5px #ffffff;
+}
 
 h1 {
-   font-size: 35px;
-   font-family: 'Times New Roman', Times, serif;
-   font-style: italic;
-   padding-top: 30px;
-   color: #000000;
-   text-shadow: 2px 2px 5px #00FF00;
+  font-size: 65px;
+  font-family: 'Times New Roman', Times, serif;
+  font-style: italic;
+  padding-top: 35px;
+  color: #00ff00;
 }
 
 h2 {
-   font-size: 35px;
-   font-family: 'Times New Roman', Times, serif;
-   font-style: italic;
-   padding-bottom: 30px;
-   color: #000000;
+  font-size: 45px;
+  font-family: 'Times New Roman', Times, serif;
+  font-style: italic;
+  padding-bottom: 10px;
+  color: #00ff00;
 }
 
 #imgHead {
@@ -30,6 +29,11 @@ h2 {
   background-size: 340px;
   height: 310px;
   display: block;
+}
+
+.headTxt {
+  text-shadow: 1px 1px 1px #FFF;
+  text-align: center;
 }
 
 #logo {
@@ -46,7 +50,7 @@ h2 {
 
 #missionTitle {
   font-size: 50px;
-  border-bottom:  2px solid #00FF00;
+  border-bottom:  2px solid #00ff00;
 }
 
 #serviceArea {
@@ -77,22 +81,16 @@ h2 {
 }
 
 #contacts {
-    color: #00FF00;
-    font-size: 27px;
-    padding-bottom: 50px;
-    text-shadow: 2px 2px 5px #ffffff;
-    padding-top: 30px;
-  }
-
-#motto {
-    font-size:30px;
-    color: #000000;
-    text-shadow: 2px 2px 5px #00FF00;
-  }
+  color: #00FF00;
+  font-size: 27px;
+  padding-bottom: 50px;
+  text-shadow: 2px 2px 5px #ffffff;
+  padding-top: 30px;
+}
 
 #services, #paymentHead {
   font-size: 50px;
-  border-bottom:  2px solid #00FF00;
+  border-bottom:  2px solid #00ff00;
   text-shadow: 2px 2px 5px #ffffff;
 }
 
@@ -137,7 +135,7 @@ a:hover {
 
 @keyframes colorChange {
   0% { color: #FF0000; }
-  25% { color: #00FF00; }
+  25% { color: #00ff00; }
   50% { color: #0000FF; }
   75% { color: #00FFBB; }
   100% { color: #FF0000; }
@@ -221,7 +219,6 @@ a:hover {
 }
 
 #img7, #img11 {
-  
   border-radius: 40px;
 }
 
@@ -241,12 +238,11 @@ a:hover {
   height: 0;
   border-style: solid;
   border-width: 10px 0 10px 20px;
-  border-color: transparent transparent transparent #00FF00;
+  border-color: transparent transparent transparent #00ff00;
   margin: 10px;
   position: relative;
   top: 50%;
   transform: translateY(-600%);
-  
 }
 
 #photo-text, #about-me-text, #contactUs-FormTitle, #contact-section {
@@ -302,7 +298,7 @@ a:visited {
 .payBtn {
   font-size: 15px;
   color:#000000;
-  border-color:#00FF00;
+  border-color:#00ff00;
   background-color: #91ffa7;
   border-radius: 30px;
   height: 40px;
@@ -325,7 +321,7 @@ a:visited {
 }
 
 .zelleQR:hover, .QR:hover {
-  border: 2px solid #00FF00
+  border: 2px solid #00ff00
 }
 
 #form {
@@ -349,7 +345,7 @@ a:visited {
 #submitButton {
   font-size: 30px;
   color:#000000;
-  border-color:#00FF00;
+  border-color:#00ff00;
   background-color: #91ffa7;
   border-radius: 30px;
   height: 40px;
@@ -369,8 +365,9 @@ a:visited {
   border: 2px solid #FF0000;
 }
 
-#welcomeMsg, #beforeAfter {
-  font-size:30px;
+#welcomeMsg {
+  font-size: 30px;
+  padding-top: 50px;
 }
 
 #bookNow {
@@ -384,7 +381,6 @@ a:visited {
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
-  
 }
 
 #reviewBody {
@@ -397,5 +393,5 @@ a:visited {
 
 #reviewSectionTitle {
   font-size: 50px;
-  border-bottom: 2px solid #00FF00;
+  border-bottom: 2px solid #00ff00;
 }
