--- a/adventure/index.css
+++ b/adventure/index.css
@@ -21,6 +21,17 @@ body {
   min-height: 100vh;
 }
 
+#secret-zone {
+  position: absolute;
+  top: 79px;
+  right: 80px;      
+  width: 50px;
+  height: 50px;
+  opacity: 0;
+  z-index: 9999;
+  
+}
+
 main {
   flex: 1;
   padding: 2em;
