-Removed "oper for business" from bookNow section -Created aboutme sub-directory to house about me section     - html, css files     -coped html and css about me      sections     -Added NavBar to gallery,payments, and about me sub-directories     -

--- a/gallery/index.css
+++ b/gallery/index.css
@@ -6,9 +6,29 @@ body {
     text-shadow: 2px 2px 5px #ffffff;
   }
 
+.navbar {
+  width: 100%;
+  background-color:#0f0f0f;
+  position: fixed;
+  top: 0;
+  font-size: 20px;
+  z-index: 1;
+}
+
+.nav-link {
+  color:#00FF00;
+  padding-right:10px;
+}
+
+#logo {
+  width: 23px;
+  height: 20px;
+}
+
 #title {
   font-size: 50px;
   text-decoration: underline;
+  margin-top: 50px;
 }
 
 .imgContainer {
