--- a/aboutme/index.css
+++ b/aboutme/index.css
@@ -1,10 +1,15 @@
+html, body {
+  height: 100%;
+}
+
 body {
   background-color: #000000;
   color: #00ff00;
   border: 1px solid rgb(0, 240, 0);
   text-align: center;
   text-shadow: 2px 2px 5px #ffffff;
-  height: 100%
+  display: flex;
+  flex-direction: column;
 }
 
 #about-me, #mission {
@@ -41,4 +46,8 @@ body {
 #logo {
   width: 23px;
   height: 20px;
+}
+
+footer {
+  margin-top:auto
 }
